<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp20">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy1"
        android:textColor="@color/black"
        android:textSize="@dimen/sp14" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp5"
        android:text="@string/privacy2"
        android:textColor="@color/black"
        android:textSize="@dimen/sp14" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp5"
        android:text="@string/privacy3"
        android:textColor="@color/black"
        android:textSize="@dimen/sp14" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp5"
        android:text="@string/privacy4"
        android:textColor="@color/black"
        android:textSize="@dimen/sp14" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp5"
        android:text="@string/privacy5"
        android:textColor="@color/black"
        android:textSize="@dimen/sp14" />

    <TextView
        android:id="@+id/tv_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp5"
        android:text="@string/privacy6"
        android:textColor="@color/black"
        android:textSize="@dimen/sp14"
        android:textStyle="bold" />

</LinearLayout>